infrastructure/03-apps/kutt/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt
  namespace: kutt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
    - host: url.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kutt
                port:
                  number: 80
  tls:
    - hosts:
        - url.foobarbaz.fr
      secretName: kutt-tls
